plugins {
    id 'java-library'
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0+'
}

version = mod_version
group = 'com.alexthw.eidolon_repraised'
base {
    archivesName = project.mod_id + '-' + project.minecraft_version
}

if (System.getenv('BUILD_NUMBER') != null) {
    version += "." + System.getenv('BUILD_NUMBER')
}

// Mojang ships Java 21 to end users in 1.21+
java.toolchain.languageVersion = JavaLanguageVersion.of(21)
java.withSourcesJar()

tasks.named('wrapper', Wrapper).configure {
    // Define wrapper values here so as to not have to always do so when updating gradlew.properties.
    // Switching this to Wrapper.DistributionType.ALL will download the full gradle sources that comes with
    // documentation attached on cursor hover of gradle classes and methods. However, this comes with increased
    // file size for Gradle. If you do switch this to ALL, run the Gradle wrapper task twice afterwards.
    // (Verify by checking gradle/wrapper/gradle-wrapper.properties to see if distributionUrl now points to `-all`)
    distributionType = Wrapper.DistributionType.BIN
}

neoForge {
    // Specify the version of NeoForge to use.
    version = project.neo_version
    validateAccessTransformers = true

    parchment {
        mappingsVersion = project.parchment_version
        minecraftVersion = "1.21.1"
    }


    runs {
        client {
            client()
            gameDirectory = project.file('runs/client')

        }

        server {
            server()
            programArgument '--nogui'
        }

        data {
            data()

            // example of overriding the workingDirectory set in configureEach above, uncomment if you want to use it
            gameDirectory = project.file('runs/data')

            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
            programArguments.addAll '--mod', 'eidolon', '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        // applies to all the run configs above
        configureEach {
            // Recommended logging data for a userdev environment
            // The markers can be added/remove as needed separated by commas.
            // "SCAN": For mods scan.
            // "REGISTRIES": For firing of registry events.
            // "REGISTRYDUMP": For getting the contents of all registries.
            systemProperty 'forge.logging.markers', 'REGISTRIES'

            // Recommended logging level for the console
            // You can set various levels here.
            // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        // define mod <-> source bindings
        // these are used to tell the game which sources are for which mod
        // mostly optional in a single mod project
        // but multi mod projects should define one per mod
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

sourceSets.main.resources { srcDir "src/generated/resources" }


repositories {
    mavenCentral()
    flatDir {
        dirs 'externalmods'
    }

    mavenLocal()
    maven {
        name = 'GeckoLib'
        url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
        content {
            includeGroup("software.bernie.geckolib")
        }
    }
    exclusiveContent {
        forRepository {
            maven {
                url "https://cursemaven.com"
            }
        }
        filter {
            includeGroup "curse.maven"
        }
    }
    maven {
        name = "Illusive Soulworks maven"
        url = "https://maven.theillusivec4.top/"
    }
    maven {
        name = "Jared's maven"
        url = "https://maven.blamejared.com/"
    }
    maven {
        name = 'Forge'
        url = "https://maven.minecraftforge.net"
    }
    maven {
        name = "OctoStudios"
        url = uri("https://maven.octo-studios.com/releases")
    }
    maven { url 'https://jitpack.io' }

}

dependencies {

    compileOnly "mezz.jei:jei-1.21.1-neoforge-api:${jei_version}"
    implementation "mezz.jei:jei-1.21.1-neoforge:${jei_version}"

    ///*implementation*/ runtimeOnly fg.deobf("joefoxe:hexerei:0.3.2.2")

    //runtimeOnly fg.deobf("software.bernie.geckolib:geckolib-forge-${mc_version}:${gecko_version}")
    implementation "top.theillusivec4.curios:curios-neoforge:${curios_version}+${minecraft_version}"
    implementation "com.hollingsworth.ars_nouveau:ars_nouveau-${minecraft_version}:${ars_version}"

    //runtimeOnly fg.deobf("curse.maven:embeddium-908741:4800420")
    //runtimeOnly fg.deobf("curse.maven:modernfix-790626:4792389")

    compileOnly "curse.maven:placebo-283644:6751290"
    compileOnly "curse.maven:apothic-attributes-898963:6751650"
    compileOnly "curse.maven:apothic-enchanting-1063926:6751658"
    compileOnly "curse.maven:apotheosis-313970:6545942"
    compileOnly "curse.maven:apothic-spawners-986583:6751589"

    //runtimeOnly fg.deobf("curse.maven:amendments-896746:5200593")
    //runtimeOnly fg.deobf("curse.maven:selene-499980:5201144")
    //runtimeOnly fg.deobf("curse.maven:spit-it-out-857141:4888754")

    //runtimeOnly fg.deobf("team.lodestar.lodestone:lodestone:1.20.1-1.6.4.252")
    //runtimeOnly fg.deobf("com.sammy.malum:malum:1.20.1-1.6.5.242") { transitive = false }

}

// Example for how to get properties into the manifest for reading by the runtime..
jar {
    manifest {
        attributes([
                "Specification-Title"     : "eidolon_repraised",
                "Specification-Vendor"    : "Alexthw",
                "Specification-Version"   : "2", // We are version 1 of ourselves
                "Implementation-Title"    : project.name,
                "Implementation-Version"  : "${version}",
                "Implementation-Vendor"   : "Alexthw",
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                "MixinConfigs"            : "eidolon_re.mixins.json"
        ])
    }
}


publishing {
    publications {
        mavenJava(MavenPublication) {
            groupId project.group
            artifactId project.archivesBaseName
            version project.version
            from components.java
        }
    }
    repositories {
        maven {
            url "file://" + System.getenv("local_maven")
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}